create github pages

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ Il budget è un documento che contiene i programmi aziendali annuali, redatti di
                     <div class="col-lg-2"></div>
                 </div> <!-- Third Row end -->
             </div> <!-- Container end -->
-        </section>        <section class="engine"><a href="https://mobirise.ws/k">develop own website</a></section><!-- CLASSIC SLIDE - TITLE + TEXT + IMG -->
+        </section>        <section class="engine"><a href="https://mobirise.ws/n">best website creator app</a></section><!-- CLASSIC SLIDE - TITLE + TEXT + IMG -->
         <section id="elsalvador">
             <div class="container">
                 <div class="row">
@@ -672,9 +672,34 @@ Un ristorante con 100 coperti à la carte e con una vendita media per stagione p
              <td>Bassa</td><td>40%</td><td>200</td></tr><tr>
              <td>media</td><td>60%</td><td>200</td></tr><tr>
              <td>alta</td><td>90%</td><td>200</td></tr></tbody></table>
-
-             <br>ha quindi i seguenti coperti venduti (200 è la capacità massima, per pranzo e cena):
-<p>Nella prossima tabella calcoliamo i coperti per i banchetti complessivi in ogni stagione, sapendo che in media sono 220 per ogni bachetti.</p>
+                        <p></p>
+                      </div>
+                    <div class="col-lg-2"></div>
+                </div> <!-- Second Row end -->
+                <div class="row">
+                    <div class="col-lg-2"></div>
+                    <div class="col-12 col-lg-8">
+                        <img id="lpvolcano" src="">
+                    </div>
+                    <div class="col-lg-2"></div>
+                </div> <!-- Third Row end -->
+            </div> <!-- Container end -->
+        </section>        <!-- CLASSIC SLIDE - TITLE + TEXT + IMG -->
+        <section id="elsalvador">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-lg-12">
+                      <h2>
+Coperti venduti
+                  </h2> <hr>
+                    </div>
+                </div> <!-- First Row end -->
+                <div class="row">
+                    <div class="col-lg-2"></div>
+                    <div class="col-12 col-lg-8 text-justify">
+                        <p>
+Ha quindi i seguenti coperti venduti (200 è la capacità massima, per pranzo e cena):
+</p><p>Nella prossima tabella calcoliamo i coperti per i banchetti complessivi in ogni stagione, sapendo che in media sono 220 per ogni bachetti.</p>
 
              <table border="1">
              <tbody><tr><th>Stagione</th><th>Calcolo</th><th>Risultato</th></tr><tr>
@@ -732,7 +757,7 @@ Ora che abbiamo definito le previsioni in termini di numero di vendite medie di 
                 <div class="row">
                     <div class="col-12 col-lg-12">
                       <h2>
-Coperti
+Coperti (menu)
                   </h2> <hr>
                     </div>
                 </div> <!-- First Row end -->
@@ -748,7 +773,33 @@ Ora che abbiamo definito le previsioni in termini di numero di vendite medie di 
     <td>media</td><td>26</td><td>120</td><td>3</td><td>26x120x3=9.630</td></tr><tr>
     <td>alta</td><td>26</td><td>180</td><td>3</td><td>26x180x3=10.040</td></tr><tr>
     </tr></tbody></table><br>
-<p>Ora definiamo i coperti dei banchetti (ogni banchetto ha in media 220 coperti)</p>
+                        <p></p>
+                      </div>
+                    <div class="col-lg-2"></div>
+                </div> <!-- Second Row end -->
+                <div class="row">
+                    <div class="col-lg-2"></div>
+                    <div class="col-12 col-lg-8">
+                        <img id="lpvolcano" src="">
+                    </div>
+                    <div class="col-lg-2"></div>
+                </div> <!-- Third Row end -->
+            </div> <!-- Container end -->
+        </section>        <!-- CLASSIC SLIDE - TITLE + TEXT + IMG -->
+        <section id="elsalvador">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-lg-12">
+                      <h2>
+Banchetti
+                  </h2> <hr>
+                    </div>
+                </div> <!-- First Row end -->
+                <div class="row">
+                    <div class="col-lg-2"></div>
+                    <div class="col-12 col-lg-8 text-justify">
+                        <p>
+</p><p>Ora definiamo i coperti dei banchetti (ogni banchetto ha in media 220 coperti)</p>
   <table border="1">
     <tbody><tr><th colspan="5">Banchetti (ogni banchetto ha in media 220 coperti)</th></tr><tr>
     <th>Stagione</th><th>n. banchetti x mese</th><th>mesi</th><th>Nun.banchetti</th><th>coperti</th></tr><tr>
@@ -769,7 +820,41 @@ Ora che abbiamo definito le previsioni in termini di numero di vendite medie di 
                     <div class="col-lg-2"></div>
                 </div> <!-- Third Row end -->
             </div> <!-- Container end -->
-        </section><style>
+        </section><!-- THE COUPLE -->
+<section id="thecouple">
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-lg-12">
+                <div class="row">
+                    <div class="col-12 col-lg-12">
+                        <h2>Budget delle vendite</h2> <hr>
+                    </div>
+                </div> <!-- First Nested Row end-->
+                <div class="row text-justify">
+                    <div class="col-lg-2"></div>
+                    <div class="col-12 col-lg-8">
+                    <p>Vediamo come si calcolano i ricavi nel budget delle vendite</p>
+                    </div>
+                    <div class="col-lg-2"></div>
+                </div> <!-- Second Nested Row end -->
+                <div class="row">
+                    <div class="col-lg-2"></div>
+                    <div class="col-8 col-lg-5 text-justify">
+                    <p></p>
+                    </div>
+                    <div class="col-lg-2"></div>
+                </div> <!-- Third Nested Row end-->
+                <div class="row">
+                    <div class="col-lg-2"></div>
+                    <div class="col-12 col-lg-8">
+                    <iframe width="854" height="480" src="https://www.youtube.com/embed/9m1YOQMlJek" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
+                    </div>
+                    <div class="col-lg-2"></div>
+                </div> <!-- Fourth Row end -->
+            </div> <!-- Col 12 end -->
+        </div> <!-- Primary Row end -->
+    </div> <!-- Container end -->
+</section><style>
 
     </style>
     <section id="elsalvador">
