create github pages

--- a/budget.html
+++ b/budget.html
@@ -27,7 +27,7 @@
 
     
 
-    <nav class="navbar navbar-expand beta-menu navbar-dropdown align-items-center navbar-fixed-top navbar-toggleable-sm">
+    <nav class="navbar navbar-expand beta-menu navbar-dropdown align-items-center navbar-fixed-top navbar-toggleable-sm bg-color transparent">
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <div class="hamburger">
                 <span></span>
@@ -53,7 +53,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/l">html web maker</a></section><div id="custom-html-g" custom-code="true" data-rv-view="9">
+<section class="engine"><a href="https://mobirise.ws/g">how to create your own website</a></section><div id="custom-html-g" custom-code="true" data-rv-view="9">
 
     
         <meta charset="utf-8">
