create github pages

--- a/budget.html
+++ b/budget.html
@@ -53,7 +53,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/b">best site creator</a></section><div id="custom-html-g" custom-code="true" data-rv-view="5">
+<section class="engine"><a href="https://mobirise.ws/j">design own website</a></section><div id="custom-html-g" custom-code="true" data-rv-view="5">
 
     
         <meta charset="utf-8">
@@ -252,40 +252,6 @@ footer {
   </style>
     <!--BODY -->
     <header class="text-center"> <div> <div class="title"> <h2>Il Budget</h2> <br> <h6>Controllare l'impresa con il budget</h6> </div> </div> <a href="#bio" class="btn btn-circle"> <i class="fa fa-angle-double-down"></i> </a> </header>        <!-- CLASSIC SLIDE - TITLE + TEXT + IMG -->
-        <section id="elsalvador">
-            <div class="container">
-                <div class="row">
-                    <div class="col-12 col-lg-12">
-                      <h2>
-Soundtrack
-                  </h2> <hr>
-                    </div>
-                </div> <!-- First Row end -->
-                <div class="row">
-                    <div class="col-lg-2"></div>
-                    <div class="col-12 col-lg-8 text-justify">
-                        <p>
-
-  Choose your music:
-  <br>
-  Playing with the sounds<br>
-  <audio controls="">
-  <source src="https://economiaaziendale.github.io/img/Da.mp3" type="audio/mpeg">
-</audio>
-
-                        </p>
-                      </div>
-                    <div class="col-lg-2"></div>
-                </div> <!-- Second Row end -->
-                <div class="row">
-                    <div class="col-lg-2"></div>
-                    <div class="col-12 col-lg-8">
-                        <img id="lpvolcano" src="">
-                    </div>
-                    <div class="col-lg-2"></div>
-                </div> <!-- Third Row end -->
-            </div> <!-- Container end -->
-        </section>        <!-- CLASSIC SLIDE - TITLE + TEXT + IMG -->
         <section id="elsalvador">
             <div class="container">
                 <div class="row">
@@ -913,7 +879,7 @@ Banchetti
                 <div class="row">
                     <div class="col-lg-2"></div>
                     <div class="col-12 col-lg-8">
-                    <iframe width="854" height="480" src="https://www.youtube.com/embed/tLpg6iTmRgg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
+                    <iframe width="100%" height="480" src="https://www.youtube.com/embed/tLpg6iTmRgg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
                     </div>
                     <div class="col-lg-2"></div>
                 </div> <!-- Fourth Row end -->
