create github pages

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <link rel="shortcut icon" href="assets/images/logo2.png" type="image/x-icon">
   <meta name="description" content="">
   <title>Home</title>
-  <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -53,7 +53,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/f">simple web maker</a></section><div id="custom-html-f" custom-code="true" data-rv-view="2">        <!-- Bootstrap CSS V4 -->
+<section class="engine"><a href="https://mobirise.ws/b">best free web site creator</a></section><div id="custom-html-f" custom-code="true" data-rv-view="2">        <!-- Bootstrap CSS V4 -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
         <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Cardo:700|Lora:400" rel="stylesheet" type="text/css">
@@ -301,14 +301,41 @@ Il budget è un documento che contiene i programmi aziendali annuali, redatti di
             </div> <!-- Container end -->
         </section><!-- Bootstrap JS V4 and JQuery V3.3.1 --> <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script> <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script> <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script> <script> window.sr = ScrollReveal(); sr.reveal('.btn', {duration: 2000, origin: 'top', distance: '60px', }); sr.reveal('#bio', {duration: 2000, origin: 'bottom', distance: '100px', reset: true }); sr.reveal('#testimonial', {duration: 2000, origin: 'bottom', viewFactor: 0.3, delay: 1000, reset: true }); sr.reveal('#elsalvador', {duration: 2000, origin: 'bottom', viewFactor: 0.5, reset: true }); sr.reveal('#therose', {duration: 2000, origin: 'bottom', viewFactor: 0.3, reset: true }); sr.reveal('#thecouple', {duration: 2000, origin: 'bottom', viewFactor: 0.3, reset: true }); sr.reveal('#pao', {duration: 2000, origin: 'right', distance: "100px", viewFactor: 0.2, reset: true }); </script>  </div>
 
+<section class="header9 cid-qL7bpt5Ihz mbr-fullscreen mbr-parallax-background" id="header9-q">
+
+    
+
+    
+
+    <div class="container">
+        <div class="media-container-column mbr-white col-md-8">
+            <h1 class="mbr-section-title align-left mbr-bold pb-3 mbr-fonts-style display-1">
+                IVA</h1>
+            <h3 class="mbr-section-subtitle align-left mbr-light pb-3 mbr-fonts-style display-2">
+                Imposta sul valore aggiunto</h3>
+            <p class="mbr-text align-left pb-3 mbr-fonts-style display-5">
+                Che cos'è? Come si applica?</p>
+            <div class="mbr-section-btn align-left"><a class="btn btn-md btn-primary display-4" href="iva.html">Leggi</a>
+                <a class="btn btn-md btn-black-outline display-4" href="iva.html">IVA</a></div>
+        </div>
+    </div>
+
+    <div class="mbr-arrow hidden-sm-down" aria-hidden="true">
+        <a href="#next">
+            <i class="mbri-down mbr-iconfont"></i>
+        </a>
+    </div>
+</section>
+
 
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
-  <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
+  <script src="assets/popper/popper.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
+  <script src="assets/parallax/jarallax.min.js"></script>
+  <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
