--- a/3bepubblico.html
+++ b/3bepubblico.html
@@ -9,11 +9,24 @@
 ul {font-size: 2em;}
 i {font-size : 2em;}
 p { font-size: 2em; }
+td {font-size: 1.5em;}
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+th, td {
+    text-align: left;
+    padding: 8px;
+}
+
+tr:nth-child(even){background-color: #f2f2f2}
+
 </style>
 
 </head>
 <body>
-<h1>Classe 3be: livello di partecipazione</h1>
+<h1>Classe 3be livello di partecipazione</h1>
 <script src="https://www.gstatic.com/firebasejs/4.10.1/firebase.js"></script>
 <script>
   var config = {
@@ -26,102 +39,106 @@ p { font-size: 2em; }
   };
   firebase.initializeApp(config);
   var database = firebase.database()
-</script>Amato Luigi<i id="h1alunno1"></i></p><script>
+</script>
+<div class="w3-main" style="margin-left:50px">
+<table class="table-bordered"><td><button type="button" class="btn btn-warning btn-lg"> - </button><button type="button" class="btn btn-info btn-lg"> + </button>Amato Luigi<td><i id="h1alunno1"></i></p><script>
     var h1alunno1 = document.getElementById("h1alunno1");
-  var dbRef1 = firebase.database().ref().child("Amato Luigi");
+  var dbRef1 = firebase.database().ref().child("3be").child("Amato Luigi");
   dbRef1.on("value", snap => h1alunno1.innerText = snap.val());
-  dbRef1.on("value", snap => n1 = snap.val())</script>Astore Marco<i id="h1alunno2"></i></p><script>
+  dbRef1.on("value", snap => n1 = snap.val())</script><tr><td><button type="button" class="btn btn-warning btn-lg"> - </button><button type="button" class="btn btn-info btn-lg"> + </button>Astore Marco<td><i id="h1alunno2"></i></p><script>
     var h1alunno2 = document.getElementById("h1alunno2");
-  var dbRef2 = firebase.database().ref().child("Astore Marco");
+  var dbRef2 = firebase.database().ref().child("3be").child("Astore Marco");
   dbRef2.on("value", snap => h1alunno2.innerText = snap.val());
-  dbRef2.on("value", snap => n2 = snap.val())</script>Correale Francesco Pio<i id="h1alunno3"></i></p><script>
+  dbRef2.on("value", snap => n2 = snap.val())</script><tr><td><button type="button" class="btn btn-warning btn-lg"> - </button><button type="button" class="btn btn-info btn-lg"> + </button>Correale Francesco Pio<td><i id="h1alunno3"></i></p><script>
     var h1alunno3 = document.getElementById("h1alunno3");
-  var dbRef3 = firebase.database().ref().child("Correale Francesco Pio");
+  var dbRef3 = firebase.database().ref().child("3be").child("Correale Francesco Pio");
   dbRef3.on("value", snap => h1alunno3.innerText = snap.val());
-  dbRef3.on("value", snap => n3 = snap.val())</script>Di Sessa Luigi<i id="h1alunno4"></i></p><script>
+  dbRef3.on("value", snap => n3 = snap.val())</script><tr><td><button type="button" class="btn btn-warning btn-lg"> - </button><button type="button" class="btn btn-info btn-lg"> + </button>Di Sessa Luigi<td><i id="h1alunno4"></i></p><script>
     var h1alunno4 = document.getElementById("h1alunno4");
-  var dbRef4 = firebase.database().ref().child("Di Sessa Luigi");
+  var dbRef4 = firebase.database().ref().child("3be").child("Di Sessa Luigi");
   dbRef4.on("value", snap => h1alunno4.innerText = snap.val());
-  dbRef4.on("value", snap => n4 = snap.val())</script>Florescu Daniel Andrei<i id="h1alunno5"></i></p><script>
+  dbRef4.on("value", snap => n4 = snap.val())</script><tr><td><button type="button" class="btn btn-warning btn-lg"> - </button><button type="button" class="btn btn-info btn-lg"> + </button>Florescu Daniel Andrei<td><i id="h1alunno5"></i></p><script>
     var h1alunno5 = document.getElementById("h1alunno5");
-  var dbRef5 = firebase.database().ref().child("Florescu Daniel Andrei");
+  var dbRef5 = firebase.database().ref().child("3be").child("Florescu Daniel Andrei");
   dbRef5.on("value", snap => h1alunno5.innerText = snap.val());
-  dbRef5.on("value", snap => n5 = snap.val())</script>Giannella Giuseppe<i id="h1alunno6"></i></p><script>
+  dbRef5.on("value", snap => n5 = snap.val())</script><tr><td><button type="button" class="btn btn-warning btn-lg"> - </button><button type="button" class="btn btn-info btn-lg"> + </button>Giannella Giuseppe<td><i id="h1alunno6"></i></p><script>
     var h1alunno6 = document.getElementById("h1alunno6");
-  var dbRef6 = firebase.database().ref().child("Giannella Giuseppe");
+  var dbRef6 = firebase.database().ref().child("3be").child("Giannella Giuseppe");
   dbRef6.on("value", snap => h1alunno6.innerText = snap.val());
-  dbRef6.on("value", snap => n6 = snap.val())</script>Giordano Emilio<i id="h1alunno7"></i></p><script>
+  dbRef6.on("value", snap => n6 = snap.val())</script><tr><td><button type="button" class="btn btn-warning btn-lg"> - </button><button type="button" class="btn btn-info btn-lg"> + </button>Giordano Emilio<td><i id="h1alunno7"></i></p><script>
     var h1alunno7 = document.getElementById("h1alunno7");
-  var dbRef7 = firebase.database().ref().child("Giordano Emilio");
+  var dbRef7 = firebase.database().ref().child("3be").child("Giordano Emilio");
   dbRef7.on("value", snap => h1alunno7.innerText = snap.val());
-  dbRef7.on("value", snap => n7 = snap.val())</script>Grippi Valerio<i id="h1alunno8"></i></p><script>
+  dbRef7.on("value", snap => n7 = snap.val())</script><tr><td><button type="button" class="btn btn-warning btn-lg"> - </button><button type="button" class="btn btn-info btn-lg"> + </button>Grippi Valerio<td><i id="h1alunno8"></i></p><script>
     var h1alunno8 = document.getElementById("h1alunno8");
-  var dbRef8 = firebase.database().ref().child("Grippi Valerio");
+  var dbRef8 = firebase.database().ref().child("3be").child("Grippi Valerio");
   dbRef8.on("value", snap => h1alunno8.innerText = snap.val());
-  dbRef8.on("value", snap => n8 = snap.val())</script>Incognito Mariavittoria<i id="h1alunno9"></i></p><script>
+  dbRef8.on("value", snap => n8 = snap.val())</script><tr><td><button type="button" class="btn btn-warning btn-lg"> - </button><button type="button" class="btn btn-info btn-lg"> + </button>Incognito Mariavittoria<td><i id="h1alunno9"></i></p><script>
     var h1alunno9 = document.getElementById("h1alunno9");
-  var dbRef9 = firebase.database().ref().child("Incognito Mariavittoria");
+  var dbRef9 = firebase.database().ref().child("3be").child("Incognito Mariavittoria");
   dbRef9.on("value", snap => h1alunno9.innerText = snap.val());
-  dbRef9.on("value", snap => n9 = snap.val())</script>Iuliano Iolanda<i id="h1alunno10"></i></p><script>
+  dbRef9.on("value", snap => n9 = snap.val())</script><tr><td><button type="button" class="btn btn-warning btn-lg"> - </button><button type="button" class="btn btn-info btn-lg"> + </button>Iuliano Iolanda<td><i id="h1alunno10"></i></p><script>
     var h1alunno10 = document.getElementById("h1alunno10");
-  var dbRef10 = firebase.database().ref().child("Iuliano Iolanda");
+  var dbRef10 = firebase.database().ref().child("3be").child("Iuliano Iolanda");
   dbRef10.on("value", snap => h1alunno10.innerText = snap.val());
-  dbRef10.on("value", snap => n10 = snap.val())</script>Laurito Mariagrazia<i id="h1alunno11"></i></p><script>
+  dbRef10.on("value", snap => n10 = snap.val())</script><tr><td><button type="button" class="btn btn-warning btn-lg"> - </button><button type="button" class="btn btn-info btn-lg"> + </button>Laurito Mariagrazia<td><i id="h1alunno11"></i></p><script>
     var h1alunno11 = document.getElementById("h1alunno11");
-  var dbRef11 = firebase.database().ref().child("Laurito Mariagrazia");
+  var dbRef11 = firebase.database().ref().child("3be").child("Laurito Mariagrazia");
   dbRef11.on("value", snap => h1alunno11.innerText = snap.val());
-  dbRef11.on("value", snap => n11 = snap.val())</script>Mastrogiovanni Lorenzo<i id="h1alunno12"></i></p><script>
+  dbRef11.on("value", snap => n11 = snap.val())</script><tr><td><button type="button" class="btn btn-warning btn-lg"> - </button><button type="button" class="btn btn-info btn-lg"> + </button>Mastrogiovanni Lorenzo<td><i id="h1alunno12"></i></p><script>
     var h1alunno12 = document.getElementById("h1alunno12");
-  var dbRef12 = firebase.database().ref().child("Mastrogiovanni Lorenzo");
+  var dbRef12 = firebase.database().ref().child("3be").child("Mastrogiovanni Lorenzo");
   dbRef12.on("value", snap => h1alunno12.innerText = snap.val());
-  dbRef12.on("value", snap => n12 = snap.val())</script>Mautone Gaetano<i id="h1alunno13"></i></p><script>
+  dbRef12.on("value", snap => n12 = snap.val())</script><tr><td><button type="button" class="btn btn-warning btn-lg"> - </button><button type="button" class="btn btn-info btn-lg"> + </button>Mautone Gaetano<td><i id="h1alunno13"></i></p><script>
     var h1alunno13 = document.getElementById("h1alunno13");
-  var dbRef13 = firebase.database().ref().child("Mautone Gaetano");
+  var dbRef13 = firebase.database().ref().child("3be").child("Mautone Gaetano");
   dbRef13.on("value", snap => h1alunno13.innerText = snap.val());
-  dbRef13.on("value", snap => n13 = snap.val())</script>Mazza Francesco<i id="h1alunno14"></i></p><script>
+  dbRef13.on("value", snap => n13 = snap.val())</script><tr><td><button type="button" class="btn btn-warning btn-lg"> - </button><button type="button" class="btn btn-info btn-lg"> + </button>Mazza Francesco<td><i id="h1alunno14"></i></p><script>
     var h1alunno14 = document.getElementById("h1alunno14");
-  var dbRef14 = firebase.database().ref().child("Mazza Francesco");
+  var dbRef14 = firebase.database().ref().child("3be").child("Mazza Francesco");
   dbRef14.on("value", snap => h1alunno14.innerText = snap.val());
-  dbRef14.on("value", snap => n14 = snap.val())</script>Mocanu Valentin<i id="h1alunno15"></i></p><script>
+  dbRef14.on("value", snap => n14 = snap.val())</script><tr><td><button type="button" class="btn btn-warning btn-lg"> - </button><button type="button" class="btn btn-info btn-lg"> + </button>Mocanu Valentin<td><i id="h1alunno15"></i></p><script>
     var h1alunno15 = document.getElementById("h1alunno15");
-  var dbRef15 = firebase.database().ref().child("Mocanu Valentin");
+  var dbRef15 = firebase.database().ref().child("3be").child("Mocanu Valentin");
   dbRef15.on("value", snap => h1alunno15.innerText = snap.val());
-  dbRef15.on("value", snap => n15 = snap.val())</script>Olivaro Elena<i id="h1alunno16"></i></p><script>
+  dbRef15.on("value", snap => n15 = snap.val())</script><tr><td><button type="button" class="btn btn-warning btn-lg"> - </button><button type="button" class="btn btn-info btn-lg"> + </button>Olivaro Elena<td><i id="h1alunno16"></i></p><script>
     var h1alunno16 = document.getElementById("h1alunno16");
-  var dbRef16 = firebase.database().ref().child("Olivaro Elena");
+  var dbRef16 = firebase.database().ref().child("3be").child("Olivaro Elena");
   dbRef16.on("value", snap => h1alunno16.innerText = snap.val());
-  dbRef16.on("value", snap => n16 = snap.val())</script>Paciello Alessandro<i id="h1alunno17"></i></p><script>
+  dbRef16.on("value", snap => n16 = snap.val())</script><tr><td><button type="button" class="btn btn-warning btn-lg"> - </button><button type="button" class="btn btn-info btn-lg"> + </button>Paciello Alessandro<td><i id="h1alunno17"></i></p><script>
     var h1alunno17 = document.getElementById("h1alunno17");
-  var dbRef17 = firebase.database().ref().child("Paciello Alessandro");
+  var dbRef17 = firebase.database().ref().child("3be").child("Paciello Alessandro");
   dbRef17.on("value", snap => h1alunno17.innerText = snap.val());
-  dbRef17.on("value", snap => n17 = snap.val())</script>Pugliese Antonio<i id="h1alunno18"></i></p><script>
+  dbRef17.on("value", snap => n17 = snap.val())</script><tr><td><button type="button" class="btn btn-warning btn-lg"> - </button><button type="button" class="btn btn-info btn-lg"> + </button>Pugliese Antonio<td><i id="h1alunno18"></i></p><script>
     var h1alunno18 = document.getElementById("h1alunno18");
-  var dbRef18 = firebase.database().ref().child("Pugliese Antonio");
+  var dbRef18 = firebase.database().ref().child("3be").child("Pugliese Antonio");
   dbRef18.on("value", snap => h1alunno18.innerText = snap.val());
-  dbRef18.on("value", snap => n18 = snap.val())</script>Romaniello Mattia<i id="h1alunno19"></i></p><script>
+  dbRef18.on("value", snap => n18 = snap.val())</script><tr><td><button type="button" class="btn btn-warning btn-lg"> - </button><button type="button" class="btn btn-info btn-lg"> + </button>Romaniello Mattia<td><i id="h1alunno19"></i></p><script>
     var h1alunno19 = document.getElementById("h1alunno19");
-  var dbRef19 = firebase.database().ref().child("Romaniello Mattia");
+  var dbRef19 = firebase.database().ref().child("3be").child("Romaniello Mattia");
   dbRef19.on("value", snap => h1alunno19.innerText = snap.val());
-  dbRef19.on("value", snap => n19 = snap.val())</script>Ruocco Vincenza<i id="h1alunno20"></i></p><script>
+  dbRef19.on("value", snap => n19 = snap.val())</script><tr><td><button type="button" class="btn btn-warning btn-lg"> - </button><button type="button" class="btn btn-info btn-lg"> + </button>Ruocco Vincenza<td><i id="h1alunno20"></i></p><script>
     var h1alunno20 = document.getElementById("h1alunno20");
-  var dbRef20 = firebase.database().ref().child("Ruocco Vincenza");
+  var dbRef20 = firebase.database().ref().child("3be").child("Ruocco Vincenza");
   dbRef20.on("value", snap => h1alunno20.innerText = snap.val());
-  dbRef20.on("value", snap => n20 = snap.val())</script>Savino Niccolò<i id="h1alunno21"></i></p><script>
+  dbRef20.on("value", snap => n20 = snap.val())</script><tr><td><button type="button" class="btn btn-warning btn-lg"> - </button><button type="button" class="btn btn-info btn-lg"> + </button>Savino Niccolò<td><i id="h1alunno21"></i></p><script>
     var h1alunno21 = document.getElementById("h1alunno21");
-  var dbRef21 = firebase.database().ref().child("Savino Niccolò");
+  var dbRef21 = firebase.database().ref().child("3be").child("Savino Niccolò");
   dbRef21.on("value", snap => h1alunno21.innerText = snap.val());
-  dbRef21.on("value", snap => n21 = snap.val())</script>Scaramella Bartolo<i id="h1alunno22"></i></p><script>
+  dbRef21.on("value", snap => n21 = snap.val())</script><tr><td><button type="button" class="btn btn-warning btn-lg"> - </button><button type="button" class="btn btn-info btn-lg"> + </button>Scaramella Bartolo<td><i id="h1alunno22"></i></p><script>
     var h1alunno22 = document.getElementById("h1alunno22");
-  var dbRef22 = firebase.database().ref().child("Scaramella Bartolo");
+  var dbRef22 = firebase.database().ref().child("3be").child("Scaramella Bartolo");
   dbRef22.on("value", snap => h1alunno22.innerText = snap.val());
-  dbRef22.on("value", snap => n22 = snap.val())</script>Vigorito Matteo<i id="h1alunno23"></i></p><script>
+  dbRef22.on("value", snap => n22 = snap.val())</script><tr><td><button type="button" class="btn btn-warning btn-lg"> - </button><button type="button" class="btn btn-info btn-lg"> + </button>Vigorito Matteo<td><i id="h1alunno23"></i></p><script>
     var h1alunno23 = document.getElementById("h1alunno23");
-  var dbRef23 = firebase.database().ref().child("Vigorito Matteo");
+  var dbRef23 = firebase.database().ref().child("3be").child("Vigorito Matteo");
   dbRef23.on("value", snap => h1alunno23.innerText = snap.val());
-  dbRef23.on("value", snap => n23 = snap.val())</script>Villano Francesco<i id="h1alunno24"></i></p><script>
+  dbRef23.on("value", snap => n23 = snap.val())</script><tr><td><button type="button" class="btn btn-warning btn-lg"> - </button><button type="button" class="btn btn-info btn-lg"> + </button>Villano Francesco<td><i id="h1alunno24"></i></p><script>
     var h1alunno24 = document.getElementById("h1alunno24");
-  var dbRef24 = firebase.database().ref().child("Villano Francesco");
+  var dbRef24 = firebase.database().ref().child("3be").child("Villano Francesco");
   dbRef24.on("value", snap => h1alunno24.innerText = snap.val());
-  dbRef24.on("value", snap => n24 = snap.val())</script>
+  dbRef24.on("value", snap => n24 = snap.val())</script><tr>
+</table>
+</div>
 </body>
 </html>
