--- a/4bspubblico.html
+++ b/4bspubblico.html
@@ -1,34 +1,38 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>3be</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
+  <title>4bs</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <style>
-ul {font-size: 1.5em;}
-i {font-size : 1.5em;}
-td {
-    color: black;
-    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-  font-size: 1.5em; }
-p { font-size: 1.5em; }
-body{
-background-image: linear-gradient(45deg, #ff9a9e 0%, #fad0c4 99%, #fad0c4 100%);
+ul {font-size: 2em;}
+i {font-size : 2em;}
+p { font-size: 2em; }
+td {font-size: 1.5em;}
+table {
+    border-collapse: collapse;
+    width: 100%;
 }
+
+th, td {
+    text-align: left;
+    padding: 8px;
+}
+
+tr:nth-child(even){background-color: #f2f2f2}
+
 </style>
 
 </head>
 <body>
-<h1>Classe 4bs</h1>
+<h1>Classe 4bs livello di partecipazione</h1>
 <script src="https://www.gstatic.com/firebasejs/4.10.1/firebase.js"></script>
 <script>
   var config = {
     apiKey: "AIzaSyDp-mWaWEI07pIdRUhi6vA-salEMRWz4hw",
     authDomain: "quiz-e5e5a.firebaseapp.com",
-    databaseURL: "https://quiz-e5e5a.firebaseio.com",
+    databaseURL: "https://quiz-e5e5a.firebaseio.com/",
     projectId: "quiz-e5e5a",
     storageBucket: "quiz-e5e5a.appspot.com",
     messagingSenderId: "901845403492"
@@ -37,91 +41,92 @@ background-image: linear-gradient(45deg, #ff9a9e 0%, #fad0c4 99%, #fad0c4 100%);
   var database = firebase.database()
 </script>
 <div class="w3-main" style="margin-left:50px">
-<table border=1><td>Amatruda Massimo => <td><i id="h1alunno1"></i><script>
+<table class="table-bordered"><td><button type="button" class="btn btn-warning btn-lg" > - </button><button type="button" class="btn btn-info btn-lg" > + </button>Amatruda Massimo<td><i id="h1alunno1"></i></p><script>
     var h1alunno1 = document.getElementById("h1alunno1");
   var dbRef1 = firebase.database().ref().child("4bs").child("Amatruda Massimo");
   dbRef1.on("value", snap => h1alunno1.innerText = snap.val());
-  dbRef1.on("value", snap => n1 = snap.val())</script><tr><td>Bortone Tommaso => <td><i id="h1alunno2"></i><script>
+  dbRef1.on("value", snap => n1 = snap.val())</script><tr><td><button type="button" class="btn btn-warning btn-lg" > - </button><button type="button" class="btn btn-info btn-lg" > + </button>Bortone Tommaso<td><i id="h1alunno2"></i></p><script>
     var h1alunno2 = document.getElementById("h1alunno2");
   var dbRef2 = firebase.database().ref().child("4bs").child("Bortone Tommaso");
   dbRef2.on("value", snap => h1alunno2.innerText = snap.val());
-  dbRef2.on("value", snap => n2 = snap.val())</script><tr><td>Cantalupo Giuseppe => <td><i id="h1alunno3"></i><script>
+  dbRef2.on("value", snap => n2 = snap.val())</script><tr><td><button type="button" class="btn btn-warning btn-lg" > - </button><button type="button" class="btn btn-info btn-lg" > + </button>Cantalupo Giuseppe<td><i id="h1alunno3"></i></p><script>
     var h1alunno3 = document.getElementById("h1alunno3");
   var dbRef3 = firebase.database().ref().child("4bs").child("Cantalupo Giuseppe");
   dbRef3.on("value", snap => h1alunno3.innerText = snap.val());
-  dbRef3.on("value", snap => n3 = snap.val())</script><tr><td>Caputo Nicola => <td><i id="h1alunno4"></i><script>
+  dbRef3.on("value", snap => n3 = snap.val())</script><tr><td><button type="button" class="btn btn-warning btn-lg" > - </button><button type="button" class="btn btn-info btn-lg" > + </button>Caputo Nicola<td><i id="h1alunno4"></i></p><script>
     var h1alunno4 = document.getElementById("h1alunno4");
   var dbRef4 = firebase.database().ref().child("4bs").child("Caputo Nicola");
   dbRef4.on("value", snap => h1alunno4.innerText = snap.val());
-  dbRef4.on("value", snap => n4 = snap.val())</script><tr><td>Carbone giuseppe => <td><i id="h1alunno5"></i><script>
+  dbRef4.on("value", snap => n4 = snap.val())</script><tr><td><button type="button" class="btn btn-warning btn-lg" > - </button><button type="button" class="btn btn-info btn-lg" > + </button>Carbone giuseppe<td><i id="h1alunno5"></i></p><script>
     var h1alunno5 = document.getElementById("h1alunno5");
   var dbRef5 = firebase.database().ref().child("4bs").child("Carbone giuseppe");
   dbRef5.on("value", snap => h1alunno5.innerText = snap.val());
-  dbRef5.on("value", snap => n5 = snap.val())</script><tr><td>Cutrì Roberto => <td><i id="h1alunno6"></i><script>
+  dbRef5.on("value", snap => n5 = snap.val())</script><tr><td><button type="button" class="btn btn-warning btn-lg" > - </button><button type="button" class="btn btn-info btn-lg" > + </button>Cutrì Roberto<td><i id="h1alunno6"></i></p><script>
     var h1alunno6 = document.getElementById("h1alunno6");
   var dbRef6 = firebase.database().ref().child("4bs").child("Cutrì Roberto");
   dbRef6.on("value", snap => h1alunno6.innerText = snap.val());
-  dbRef6.on("value", snap => n6 = snap.val())</script><tr><td>Del gaudio Giuseppe => <td><i id="h1alunno7"></i><script>
+  dbRef6.on("value", snap => n6 = snap.val())</script><tr><td><button type="button" class="btn btn-warning btn-lg" > - </button><button type="button" class="btn btn-info btn-lg" > + </button>Del gaudio Giuseppe<td><i id="h1alunno7"></i></p><script>
     var h1alunno7 = document.getElementById("h1alunno7");
   var dbRef7 = firebase.database().ref().child("4bs").child("Del gaudio Giuseppe");
   dbRef7.on("value", snap => h1alunno7.innerText = snap.val());
-  dbRef7.on("value", snap => n7 = snap.val())</script><tr><td>Di Santi Angela => <td><i id="h1alunno8"></i><script>
+  dbRef7.on("value", snap => n7 = snap.val())</script><tr><td><button type="button" class="btn btn-warning btn-lg" > - </button><button type="button" class="btn btn-info btn-lg" > + </button>Di Santi Angela<td><i id="h1alunno8"></i></p><script>
     var h1alunno8 = document.getElementById("h1alunno8");
   var dbRef8 = firebase.database().ref().child("4bs").child("Di Santi Angela");
   dbRef8.on("value", snap => h1alunno8.innerText = snap.val());
-  dbRef8.on("value", snap => n8 = snap.val())</script><tr><td>Krzesinska Paulina => <td><i id="h1alunno9"></i><script>
+  dbRef8.on("value", snap => n8 = snap.val())</script><tr><td><button type="button" class="btn btn-warning btn-lg" > - </button><button type="button" class="btn btn-info btn-lg" > + </button>Krzesinska Paulina<td><i id="h1alunno9"></i></p><script>
     var h1alunno9 = document.getElementById("h1alunno9");
   var dbRef9 = firebase.database().ref().child("4bs").child("Krzesinska Paulina");
   dbRef9.on("value", snap => h1alunno9.innerText = snap.val());
-  dbRef9.on("value", snap => n9 = snap.val())</script><tr><td>Lettieri Stefania => <td><i id="h1alunno10"></i><script>
+  dbRef9.on("value", snap => n9 = snap.val())</script><tr><td><button type="button" class="btn btn-warning btn-lg" > - </button><button type="button" class="btn btn-info btn-lg" > + </button>Lettieri Stefania<td><i id="h1alunno10"></i></p><script>
     var h1alunno10 = document.getElementById("h1alunno10");
   var dbRef10 = firebase.database().ref().child("4bs").child("Lettieri Stefania");
   dbRef10.on("value", snap => h1alunno10.innerText = snap.val());
-  dbRef10.on("value", snap => n10 = snap.val())</script><tr><td>Maiese Giuseppe => <td><i id="h1alunno11"></i><script>
+  dbRef10.on("value", snap => n10 = snap.val())</script><tr><td><button type="button" class="btn btn-warning btn-lg" > - </button><button type="button" class="btn btn-info btn-lg" > + </button>Maiese Giuseppe<td><i id="h1alunno11"></i></p><script>
     var h1alunno11 = document.getElementById("h1alunno11");
   var dbRef11 = firebase.database().ref().child("4bs").child("Maiese Giuseppe");
   dbRef11.on("value", snap => h1alunno11.innerText = snap.val());
-  dbRef11.on("value", snap => n11 = snap.val())</script><tr><td>Maiuri Claudia => <td><i id="h1alunno12"></i><script>
+  dbRef11.on("value", snap => n11 = snap.val())</script><tr><td><button type="button" class="btn btn-warning btn-lg" > - </button><button type="button" class="btn btn-info btn-lg" > + </button>Maiuri Claudia<td><i id="h1alunno12"></i></p><script>
     var h1alunno12 = document.getElementById("h1alunno12");
   var dbRef12 = firebase.database().ref().child("4bs").child("Maiuri Claudia");
   dbRef12.on("value", snap => h1alunno12.innerText = snap.val());
-  dbRef12.on("value", snap => n12 = snap.val())</script><tr><td>Merola Giuseppina Pia => <td><i id="h1alunno13"></i><script>
+  dbRef12.on("value", snap => n12 = snap.val())</script><tr><td><button type="button" class="btn btn-warning btn-lg" > - </button><button type="button" class="btn btn-info btn-lg" > + </button>Merola Giuseppina Pia<td><i id="h1alunno13"></i></p><script>
     var h1alunno13 = document.getElementById("h1alunno13");
   var dbRef13 = firebase.database().ref().child("4bs").child("Merola Giuseppina Pia");
   dbRef13.on("value", snap => h1alunno13.innerText = snap.val());
-  dbRef13.on("value", snap => n13 = snap.val())</script><tr><td>Moscatiello Anna Rita => <td><i id="h1alunno14"></i><script>
+  dbRef13.on("value", snap => n13 = snap.val())</script><tr><td><button type="button" class="btn btn-warning btn-lg" > - </button><button type="button" class="btn btn-info btn-lg" > + </button>Moscatiello Anna Rita<td><i id="h1alunno14"></i></p><script>
     var h1alunno14 = document.getElementById("h1alunno14");
   var dbRef14 = firebase.database().ref().child("4bs").child("Moscatiello Anna Rita");
   dbRef14.on("value", snap => h1alunno14.innerText = snap.val());
-  dbRef14.on("value", snap => n14 = snap.val())</script><tr><td>Ridolfi Erika => <td><i id="h1alunno15"></i><script>
+  dbRef14.on("value", snap => n14 = snap.val())</script><tr><td><button type="button" class="btn btn-warning btn-lg" > - </button><button type="button" class="btn btn-info btn-lg" > + </button>Ridolfi Erika<td><i id="h1alunno15"></i></p><script>
     var h1alunno15 = document.getElementById("h1alunno15");
   var dbRef15 = firebase.database().ref().child("4bs").child("Ridolfi Erika");
   dbRef15.on("value", snap => h1alunno15.innerText = snap.val());
-  dbRef15.on("value", snap => n15 = snap.val())</script><tr><td>Ruocco Michele => <td><i id="h1alunno16"></i><script>
+  dbRef15.on("value", snap => n15 = snap.val())</script><tr><td><button type="button" class="btn btn-warning btn-lg" > - </button><button type="button" class="btn btn-info btn-lg" > + </button>Ruocco Michele<td><i id="h1alunno16"></i></p><script>
     var h1alunno16 = document.getElementById("h1alunno16");
   var dbRef16 = firebase.database().ref().child("4bs").child("Ruocco Michele");
   dbRef16.on("value", snap => h1alunno16.innerText = snap.val());
-  dbRef16.on("value", snap => n16 = snap.val())</script><tr><td>Schiavo Angela => <td><i id="h1alunno17"></i><script>
+  dbRef16.on("value", snap => n16 = snap.val())</script><tr><td><button type="button" class="btn btn-warning btn-lg" > - </button><button type="button" class="btn btn-info btn-lg" > + </button>Schiavo Angela<td><i id="h1alunno17"></i></p><script>
     var h1alunno17 = document.getElementById("h1alunno17");
   var dbRef17 = firebase.database().ref().child("4bs").child("Schiavo Angela");
   dbRef17.on("value", snap => h1alunno17.innerText = snap.val());
-  dbRef17.on("value", snap => n17 = snap.val())</script><tr><td>Spera Aurelia => <td><i id="h1alunno18"></i><script>
+  dbRef17.on("value", snap => n17 = snap.val())</script><tr><td><button type="button" class="btn btn-warning btn-lg" > - </button><button type="button" class="btn btn-info btn-lg" > + </button>Spera Aurelia<td><i id="h1alunno18"></i></p><script>
     var h1alunno18 = document.getElementById("h1alunno18");
   var dbRef18 = firebase.database().ref().child("4bs").child("Spera Aurelia");
   dbRef18.on("value", snap => h1alunno18.innerText = snap.val());
-  dbRef18.on("value", snap => n18 = snap.val())</script><tr><td>Tancredi Marika => <td><i id="h1alunno19"></i><script>
+  dbRef18.on("value", snap => n18 = snap.val())</script><tr><td><button type="button" class="btn btn-warning btn-lg" > - </button><button type="button" class="btn btn-info btn-lg" > + </button>Tancredi Marika<td><i id="h1alunno19"></i></p><script>
     var h1alunno19 = document.getElementById("h1alunno19");
   var dbRef19 = firebase.database().ref().child("4bs").child("Tancredi Marika");
   dbRef19.on("value", snap => h1alunno19.innerText = snap.val());
-  dbRef19.on("value", snap => n19 = snap.val())</script><tr><td>Vaccaro Domenico => <td><i id="h1alunno20"></i><script>
+  dbRef19.on("value", snap => n19 = snap.val())</script><tr><td><button type="button" class="btn btn-warning btn-lg" > - </button><button type="button" class="btn btn-info btn-lg" > + </button>Vaccaro Domenico<td><i id="h1alunno20"></i></p><script>
     var h1alunno20 = document.getElementById("h1alunno20");
   var dbRef20 = firebase.database().ref().child("4bs").child("Vaccaro Domenico");
   dbRef20.on("value", snap => h1alunno20.innerText = snap.val());
-  dbRef20.on("value", snap => n20 = snap.val())</script><tr><td>Vassalluzzo Benedetta => <td><i id="h1alunno21"></i><script>
+  dbRef20.on("value", snap => n20 = snap.val())</script><tr><td><button type="button" class="btn btn-warning btn-lg" > - </button><button type="button" class="btn btn-info btn-lg" > + </button>Vassalluzzo Benedetta<td><i id="h1alunno21"></i></p><script>
     var h1alunno21 = document.getElementById("h1alunno21");
   var dbRef21 = firebase.database().ref().child("4bs").child("Vassalluzzo Benedetta");
   dbRef21.on("value", snap => h1alunno21.innerText = snap.val());
-  dbRef21.on("value", snap => n21 = snap.val())</script><tr></table>
+  dbRef21.on("value", snap => n21 = snap.val())</script><tr>
+</table>
 </div>
 </body>
 </html>
